modules/gdscript/tests/scripts/analyzer/errors/enum_unnamed_assign_to_named.gd
enum { ENUM_VALUE_1, ENUM_VALUE_2 }

enum MyEnum { ENUM_VALUE_1, ENUM_VALUE_2 }

func test():
	var local_var: MyEnum = ENUM_VALUE_1
	print(local_var)
